--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "sns-lambda-subscriber-dynamodb",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/lambda.js",
   "scripts": {
-    "package": "aws cloudformation package --template-file template.yaml --output-template-file output.yaml --s3-bucket sns-lambda-subscriber-dynamodb-bucket",
-    "deploy": "aws cloudformation deploy --template-file output.yaml --stack-name sns-lambda-subscriber-dynamodb --capabilities CAPABILITY_IAM --parameter-overrides TableName=$npm_package_config_table_name",
-    "qd": "npm run package && npm run deploy"
+    "deploy": "sam deploy"
   },
   "config": {
     "table_name": "randomNames"
