--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/lambda.js",
   "scripts": {
-    "deploy": "sam deploy"
+    "deploy": "sam deploy",
+    "package": "sam package --template-file template.yaml --output-template-file output.yaml --s3-bucket app-repo-components"
   },
   "config": {
     "table_name": "randomNames"
